# stm32f103-baremetal

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
build_examples/: Makefile
build_examples/examples/cpu8_vm/: Makefile
build_examples/examples/led_shift/: Makefile
build_examples/examples/morse_code/: Makefile
build_examples/examples/mosquito_trap/: Makefile
build_examples/examples/rocket_telemetry/: Makefile  rocket_telemetry
cmake/: arm-none-eabi-gcc.cmake
core/: linker.ld  startup.c  stm32f103.h  syscalls.c  vectors.c
drivers/: delay.h  gpio.c  gpio.h  systick.c  systick.h  uart.c  uart.h
examples/cpu8_vm/: CMakeLists.txt  cpu8.c  cpu8.h  main.c
examples/led_shift/: CMakeLists.txt  main.c
examples/morse_code/: CMakeLists.txt  main.c
examples/mosquito_trap/: CMakeLists.txt  main.c
examples/rocket_telemetry/: CMakeLists.txt  flight_sim.c  flight_sim.h  main.c  telemetry.c  telemetry.h
include/: project_config.h
src/: main.c
tests/: CMakeLists.txt  gpio_fake_hw.c  gpio_fake_hw.h  systick_fake_hw.c  systick_fake_hw.h  test_gpio.c  test_systick.c  test_uart.c  uart_fake_hw.c  uart_fake_hw.h
